# icu

./: CMakeLists.txt  README.md
cmake/: HunterGate.cmake
source/common/: sugar.cmake
source/common/unicode/: sugar.cmake
source/i18n/: sugar.cmake
source/i18n/unicode/: sugar.cmake
source/io/: sugar.cmake
source/io/unicode/: sugar.cmake
source/layout/: sugar.cmake
source/layoutex/: sugar.cmake
source/layoutex/layout/: sugar.cmake
source/stubdata/: README.md  sugar.cmake
